<resources>
    <string name="app_name">Paycent</string>
    <string name="tc_logo_text">Complete your personal and payment details to be used with Zapper™.</string>
    <string name="zapper_description">Zapper™ does everything is normal scanner does and more. It allows to register and login to websites, easily purchase items from online stores and pay bill.</string>
    <string name="important">Important:</string>
    <string name="important_details">Important: If you lose your device after ensuring your information, send an email to cit@mail.com (with subject LOST DEVICE) from the email address you registered with.</string>
    <string name="note">Note:</string>
    <string name="note_details">Note: All information is successfully encrypted and only store on your device. We never stores payments or password information on our servers.</string>
    <string name="footer_details">You must agree to the Terms of Use and Privacy Policy before using Zapper™ and Accessing my profile Section of the App </string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="decline">DECLINE</string>
    <string name="accept">ACCEPT</string>
    <string name="personal_details">Personal Details</string>
    <string name="para">Please Provide your name and an optional profile photo.</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="Verify_your_pn">Verify Your Phone Number</string>
    <string name="sending_details">Zapper™ will send a one time SMS message to verify your phone number.</string>
    <string name="code">Please confirm your country code and enter your phone number.</string>
    <string name="bd">Bangladesh</string>
    <string name="bd_code">+880</string>
    <string name="phone_number">Phone Number</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="your_name_here">Your Name Here</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="scan">Scan</string>
    <string name="inbox">Inbox</string>
    <string name="history">History</string>
    <string name="finder">Finder</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="my_profile">My Profile</string>
    <string name="enter_the_verification_code">Enter the Verification Code</string>
    <string name="verification_sms_details">You will receive a Varification SMS shortly. Please Enter the Verification Code in the field below.</string>
    <string name="verification_code">Verification Code</string>
    <string name="otp_not_available">You will receive no farther (OTP) messages from Zapper™ that you have not received</string>
    <string name="_880">+880</string>
    <string name="majw_zapper_com">majw@zapper.com</string>
    <string name="_1824752549">1824752549</string>
    <string name="my_address">My Address</string>
    <string name="my_cards">My Cards</string>
    <string name="credit_card_details">Credit Card Details</string>
    <string name="scan_your_card">Scan your Card</string>
    <string name="or">OR</string>
    <string name="expires_mm_yy">Expires MM/YY</string>
    <string name="cvc_code">CvC Code</string>
    <string name="add">ADD</string>
    <string name="todo">TODO</string>
    <string name="zapper_nearby">Zapper™ Nearby</string>
    <string name="you_have_1_unread_message">You have 1 unread message</string>
    <string name="loyalty_cards">Loyalty Cards</string>
    <string name="vouchers">Vouchers</string>
    <string name="scan_caps">SCAN</string>
    <string name="keybord">Keybord</string>
    <string name="card_details">Card Details</string>
    <string name="done">Done</string>
    <string name="my_convenience">My Convenience</string>
    <string name="edit_amount">Edit Amount</string>
    <string name="_6_60">$6.60</string>
    <string name="_1_of_4_vouchers">1 of 4 Vouchers</string>
    <string name="_2_00">-$2.00</string>
    <string name="paying">PAYING</string>
    <string name="processing">Please wait while we process your payment...</string>
    <string name="payment_methods">PAYMENT METHODS</string>
    <string name="history_caps">HISTORY</string>
    <string name="my_favorites">MY FAVORITES</string>
    <string name="addresses">ADDRESSES</string>
    <string name="vehicles">VEHICLES</string>
    <string name="jack_skinner">Jack Skinner</string>
    <string name="level">Level</string>
    <string name="your_information">Your Information</string>
    <string name="we_can_get_your_basic_info_from">We can get your basic info from</string>
    <string name="outlined_button">Outlined button</string>
    <string name="post_warning">We\'ll never post to your wall without your consent</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="verification">Verification</string>
    <string name="verification_massage">To Complete your phone number verification, please enter the 4 digit activation code we are massaging to +880182475</string>
    <string name="sending_code">Sending Code</string>
    <string name="c_o_d_e">C O D E</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="submit_code">Submit Code</string>
    <string name="tap_here_to_scan_card">TAP HERE TO SCAN CARD</string>
    <string name="card_number">Card Number</string>
    <string name="or_enter_manually">OR ENTER MANUALLY</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="_000">000</string>
    <string name="alias">Alias</string>
    <string name="name_of_card">Name of Card</string>
    <string name="optional">(Optional)</string>
    <string name="_0000_0000_0000_0000">0000 0000 0000 0000</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="central_perk">Central Perk</string>
    <string name="r_0_00">R 0.00</string>
    <string name="amount">AMOUNT</string>
    <string name="none_available">None Available</string>
    <string name="add_comment_or_review"><u>ADD COMMENT OR REVIEW</u></string>
    <string name="delete_comment_or_review"><u>DELETE COMMENT OR REVIEW</u></string>
    <string name="scan_pay"><![CDATA[SCAN & PAY]]></string>
    <string name="get_free_vouchers_and_discounts">GET FREE VOUCHERS AND DISCOUNTS</string>
    <string name="share_zapper">SHARE ZAPPER</string>
    <string name="your_inbox">YOUR INBOX</string>
    <string name="browse_restaurant">BROWSE RESTAURANT</string>
    <string name="home">Home</string>
    <string name="processing_head">Processing</string>
    <string name="thank_you">Thank you.</string>
    <string name="we_are_processing_your_payment">We are processing your payment.</string>
    <string name="pd">I certify theat this review is based on my own experience. This is my honest opinion of this establishment. I have no relationship (Personal or business) with this establishment, and I am not being compensated (incentive or payment) for writing this review.</string>
    <string name="start_typing_here">Start typing here</string>
    <string name="skip">SKIP</string>
    <string name="done_you_have_paid">Done! You have paid.</string>


</resources>