<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/scan"
            android:title="@string/scan"
            android:icon="@drawable/ic_baseline_center_focus_strong_24"
            />

        <item android:id="@+id/inbox"
            android:title="@string/inbox"
            android:icon="@drawable/ic_baseline_forward_to_inbox_24"
            />

        <item android:id="@+id/history"
            android:title="@string/history"
            android:icon="@drawable/ic_baseline_history_24"
            />

        <item android:id="@+id/finder"
            android:title="@string/finder"
            android:icon="@drawable/ic_baseline_search_24"
            />

        <item android:id="@+id/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"/>

        <item android:id="@+id/about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="About"/>

    </group>


</menu>