<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/payment_methods"
            android:title="@string/payment_methods"
            android:icon="@drawable/credit_card"
            />

        <item android:id="@+id/history"
            android:title="@string/history_caps"
            android:icon="@drawable/ic_baseline_history_24"
            />

        <item android:id="@+id/my_favorites"
            android:title="@string/my_favorites"
            android:icon="@drawable/ic_baseline_favorite_border_24"
            />

        <item android:id="@+id/addresses"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/addresses"/>

        <item android:id="@+id/vehicles"
            android:icon="@drawable/ic_baseline_drive_eta_24"
            android:title="@string/vehicles"/>
        <item android:id="@+id/about"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="SETTINGS"/>

    </group>


</menu>