<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MyProfile5">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#0288D1"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/white">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/headTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/white"
        android:text="@string/credit_card_details"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/toolBar"
        app:layout_constraintTop_toBottomOf="@id/toolBar"/>

    <LinearLayout
        android:id="@+id/linear_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@id/headTv"
        app:layout_constraintStart_toStartOf="@id/headTv"
        app:layout_constraintTop_toBottomOf="@id/headTv">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_crop_free_24"/>
        <TextView
            android:id="@+id/scanTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:textColor="#0288D1"
            android:textSize="26sp"
            android:gravity="center"
            android:text="@string/scan_your_card"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:gravity="center"
        android:layout_margin="4dp"
        app:layout_constraintStart_toStartOf="@id/headTv"
        app:layout_constraintTop_toBottomOf="@id/linear_one"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number"
        android:layout_margin="16dp"
        android:drawableEnd="@drawable/ic_baseline_error_24"
        app:layout_constraintStart_toStartOf="@id/or"
        app:layout_constraintTop_toBottomOf="@id/or"/>

    <LinearLayout
        android:id="@+id/expire_cvc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="@id/card_number"
        app:layout_constraintTop_toBottomOf="@id/card_number">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/expires_mm_yy"
            android:drawableEnd="@drawable/ic_baseline_error_24"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cvc_code"
            android:drawableEnd="@drawable/ic_baseline_error_24"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_of_card"
        android:layout_margin="16dp"
        android:gravity=""
        android:drawableEnd="@drawable/ic_baseline_error_24"
        app:layout_constraintStart_toStartOf="@id/expire_cvc"
        app:layout_constraintTop_toBottomOf="@id/expire_cvc"/>

    <LinearLayout
        android:id="@id/linearTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BBBABD"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_baseline_cancel_24"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_baseline_done_24"
            android:text="@string/add"
            android:textColor="#388E3C"
            android:textSize="26sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>